<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Site noir</string>
    <string name="widget_desc">Production en cours et recommandations du Site noir (Delta Force)</string>
    <string name="maj_widget">Mettre à jour le widget</string>
    <string name="rafraichir">Rafraîchir</string>
    <string name="vide">Appuie sur ⟳ pour charger les infos</string>
    <string name="onglet_prod">Production</string>
    <string name="onglet_reco">Recommandations</string>
</resources>
